--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>OI 教练模拟器</title>
+<title>MO 教练模拟器</title>
 <link rel="stylesheet" href="styles.css">
 <script>
   (function(){
@@ -29,7 +29,7 @@
 <div class="container">
   <header>
     <div>
-      <h1>OI 教练模拟器</h1>
+      <h1>MO 教练模拟器</h1>
     </div>
     <div class="topline">
       <div id="header-week" class="small">第 1 周</div>
@@ -56,14 +56,14 @@
         <h4 style="margin:0">设施</h4>
         <div class="facility-grid" style="margin-top:8px">
           <div class="facility">
-            <div class="fac-label">计算机</div>
+            <div class="fac-label">教室</div>
             <div id="fac-computer" class="stat">1</div>
             <div class="small muted">提升综合训练效率</div>
             <div class="fac-action"><button class="btn upgrade" data-fac="computer" id="upgrade-computer">升级</button></div>
           </div>
 
           <div class="facility">
-            <div class="fac-label">资料库</div>
+            <div class="fac-label">图书馆</div>
             <div id="fac-library" class="stat">1</div>
             <div class="small muted">提升知识训练效率</div>
             <div class="fac-action"><button class="btn upgrade" data-fac="library" id="upgrade-library">升级</button></div>
@@ -180,7 +180,7 @@
       </div>
       <div class="col small">
         <strong>比赛日程</strong>
-        <div class="small muted" style="margin-top:4px">比赛顺序（每季两轮）：CSP-S1 → CSP-S2 → NOIP → 省选 → NOI</div>
+        <div class="small muted" style="margin-top:4px">比赛顺序（每季两轮）：校内选拔 → 预赛 → 联赛 → 省培 → CMO</div>
         <div id="comp-schedule" class="small muted" style="margin-top:6px"></div>
       </div>
 
