--- a/help.html
+++ b/help.html
@@ -32,7 +32,7 @@
     <h2>他怎么退队了？学生模型</h2>
     <ul class="guide">
       <li><strong>基础能力</strong>：思维、代码、心理。</li>
-      <li><strong>知识结构</strong>：数据结构、图论、字符串、数学、DP 五大类，各自有独立数值，并在比赛中参与"知识门槛"判定，如果题目过难，会导致通过概率大幅下降。</li>
+      <li><strong>知识结构</strong>：高考课内、几何、代数、组合、数论 五大类，各自有独立数值，并在比赛中参与"知识门槛"判定，如果题目过难，会导致通过概率大幅下降。</li>
       <li><strong>压力与舒适</strong>：高压力会降低学习效率、增加退队/生病概率；舒适度受设施与天气影响，进而影响压力与恢复。请平衡你的压力。</li>
       <li>如果训练时提示你“强度过大”，那你就要小心了。</li>
     </ul>
