--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>开始 — OI 教练模拟器</title>
+  <title>开始 — MO教练模拟器</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     /* 启动蒙版样式 */
@@ -83,9 +83,9 @@
     <div class="mask-content">
       <h2>OI 教练模拟器</h2>
       <h3 class="oi-start-subtitle" style="font-size:16px;margin:6px 0 12px;color:rgba(255,255,255,0.95);font-weight:400;line-height:1.9;"></h3>
-        高二省选，你被追忆创飞无缘省队。<br><br>
-        一觉醒来，你发现你坐在机房前，成为了你们学校信息学竞赛的总教练。<br><br>
-        回想起之前构造题没checker，模拟赛没大样例，一个月没有半天假期的训练生活。<br><br>
+        高二联赛，你被追忆创飞无缘省队。<br><br>
+        一觉醒来，你发现你坐在教室前，成为了你们学校数学竞赛的总教练。<br><br>
+        回想起之前没有注意到恒等变形，一个月没有半天假期的训练生活。<br><br>
         你决定要改变这一切。
   </h3>
   <p></p>
@@ -96,7 +96,7 @@
   </div>
 <div class="container">
   <header>
-    <h1>OI 教练模拟器 — 开始</h1>
+    <h1>MO 教练模拟器 — 开始</h1>
   </header>
   <div class="panel">
     <h3>新游戏设置</h3>
@@ -144,11 +144,11 @@
     <div class="sub-panel collapsible collapsed" id="talent-only-panel" style="margin-top:12px">
       <h4>游戏核心概念</h4>
       <div class="small muted" style="line-height:1.6;margin-bottom:10px">
-        <p><strong>目标</strong>：带领学生在两个赛季内冲击NOI金牌，入选国家集训队，进军IOI</p>
+        <p><strong>目标</strong>：带领学生在两个赛季内冲击CMO金牌，入选国家集训队，进军IMO</p>
         <p><strong>学生属性</strong>：思维、编程、心理三项基础能力 + 五大知识点（数据结构、图论、字符串、数学、DP）</p>
         <p><strong>经费管理</strong>：升级设施、参加集训都需要经费，需合理规划</p>
         <p><strong>压力系统</strong>：高压训练会增加压力，压力过高可能导致退队</p>
-        <p><strong>比赛链</strong>：CSP-S1 → CSP-S2 → NOIP → 省选 → NOI，必须通过前一场才能参加下一场</p>
+        <p><strong>比赛链</strong>：校内选拔 → 预赛 → 联赛 → 省培 → CMO，必须通过前一场才能参加下一场</p>
       </div>
   <h4 class="collapsible-head" style="margin-top:16px">天赋预览</h4>
   <div class="small muted" style="margin-bottom:6px">学生在训练中有概率获得天赋，天赋会影响比赛表现和训练效果</div>
@@ -501,7 +501,7 @@
   })();
 </script>
   <footer style="text-align:center;padding:12px 8px;color:#666;font-size:13px;border-top:1px solid #eee;margin-top:18px">
-    作者 @Dreamers-seve · 洛谷: <a href="https://www.luogu.com.cn/user/668972" target="_blank" rel="noopener">https://www.luogu.com.cn/user/668972</a> · GitHub: <a href="https://github.com/seve42/OItrainer" target="_blank" rel="noopener">https://github.com/seve42/OItrainer</a>
+    原作者 @Dreamers-seve · 洛谷: <a href="https://www.luogu.com.cn/user/668972" target="_blank" rel="noopener">https://www.luogu.com.cn/user/668972</a> · GitHub: <a href="https://github.com/seve42/OItrainer" target="_blank" rel="noopener">https://github.com/seve42/OItrainer</a>
   </footer>
   <!-- winter plan injection: center link inside footer (or fixed bottom if no footer) -->
   <script>
